<resources>
    <string name="app_name">Academy Minsk Movies</string>

    <string name="released_title">Released:</string>
    <string name="button_movie_trailer">Movie Trailer</string>
    <string name="overview_title">Overview:</string>

    <string name="content_description_movie_backdrop">Movie Backdrop</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="menu_coroutine_activity_title">Open Coroutines Activity</string>
    <string name="menu_thread_handler_activity_title">Open Thread Handler Activity</string>
    <string name="coroutine_create">Create</string>
    <string name="coroutine_start">Start</string>
    <string name="coroutine_stop">Stop</string>
    <string name="fragment_coroutine_title">Coroutines activity</string>
    <string name="fragment_handler_exe_title">This is Thread Handler Activity</string>

    <string name="msg_oncreate">Coroutine created</string>
    <string name="msg_onstart">Coroutine Started</string>
    <string name="msg_oncancel">Coroutine cancelled</string>
    <string name="msg_should_create_task">Must click \"create\" task first</string>
    <string name="msg_thread_oncreate">Thread Task created</string>
    <string name="msg_thread_onstart">Thread Task Started</string>
    <string name="msg_thread_oncancel">Thread Task cancelled</string>
    <string name="msg_preexecute">Pre execute run</string>
    <string name="msg_postexecute">Post execute run</string>

    <string name="done">Done!</string>
    <string name="task_created">Job created</string>

    <string name="error_load_movies">Can\'t load movies: %1$s</string>
    <string name="error_load_trailer">Can\'t load trailer: %1$s</string>
    <string name="error_load_movies_no_network">Can\'t update movies: no Internet connection</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="start_service">Start Service</string>
    <string name="start_workermanager">Start WorkerManager</string>
    <string name="progress">Progress:</string>
    <string name="menu_open_background_service_activity">Open Background Service Activity</string>

    <string name="notification_channel_name">androidacademy</string>
    <string name="notification_text">Androidacademy</string>

    <string name="generic_error">Something went wrong</string>
    <string name="dialog_title">Permission needed</string>
    <string name="dialog_message">To be able downloading requested file the app needs to access your files</string>
    <string name="dialog_ok">OK</string>
    <string name="notification_title">Downloading… %1$d%%</string>
    <string name="notification_message">In progress</string>
    <string name="channel_name">Default channel</string>
    <string name="channel_description">It is a channel for default notifications</string>
    <string name="notification_error_title">Error</string>
    <string name="notification_error_message">Image can not be downloaded</string>
    <string name="download_a_poster_image">Download a poster image</string>

</resources>
